--- a/catalog/view/theme/default/stylesheet/astyle.css
+++ b/catalog/view/theme/default/stylesheet/astyle.css
@@ -144,7 +144,7 @@ section {
     position: relative;
 }
 
-.right-box {
+.box-options {
     background: #fff;
 }
 .right-box>.btn-group {
@@ -178,6 +178,7 @@ section {
     position: absolute; 
     top: 133px; 
     left: 256px;
+    width: 228px;
 }
 .print-layer {
     width:1062px;
@@ -227,12 +228,11 @@ h1, h2.title {
     font-family: Poppins Light;
     color: rgb(33, 31, 32);
     line-height: 1.458;
-    float: left;
 }
 .price>span {
     font-family: Poppins Medium;
 }
-#button-cart {
+/*#button-cart {
     border-width: 1px;
     border-color: rgb(102, 255, 51);
     border-style: solid;
@@ -250,13 +250,13 @@ h1, h2.title {
     background-color: rgb(102, 255, 51);
     color:#fff;
     box-shadow: 0px 0px 30px 0.00px rgba(0, 0, 0, 0.1);
-}
+}*/
 #buy {
     overflow: hidden;
     padding: 20px 10px;
     margin: 0 -10px;
 }
-.viewed {
+/*.viewed {
     background-color: rgb(248, 248, 248);
     width: 100%;
     height: 35px;
@@ -266,7 +266,7 @@ h1, h2.title {
     color: rgb(33, 31, 32);
     line-height: 2.4;
     margin-bottom: 20px;
-}
+}*/
 .description {
   font-size: 18px;
   font-family: Poppins Light;
