--- a/catalog/view/theme/default/stylesheet/css/bootstrap.css
+++ b/catalog/view/theme/default/stylesheet/css/bootstrap.css
@@ -1611,8 +1611,8 @@ pre code {
     margin-left: auto;
 }
 .row {
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right: -5px;
+    margin-left: -5px;
 }
 .col-xs-1,
 .col-sm-1,
@@ -2724,6 +2724,7 @@ input[type="search"] {
 }
 .form-group {
     margin-bottom: 15px;
+    margin-top: 10px;
 }
 .radio,
 .checkbox {
@@ -3069,8 +3070,8 @@ select[multiple].input-lg {
     min-height: 27px;
 }
 .form-horizontal .form-group {
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right: -5px;
+    margin-left: -5px;
 }
 @media (min-width: 768px) {
     .form-horizontal .control-label {
