--- a/catalog/view/theme/default/stylesheet/css/mosch.css
+++ b/catalog/view/theme/default/stylesheet/css/mosch.css
@@ -294,7 +294,7 @@ select {
 /* EOF 4!!!!!!!!!!!!!*/
 /* MAIN!!!!!!!!!!!!*/
 .section_main {
-  background: url("../img/back5.jpg") no-repeat center;
+  background: url("../img/banner1.gif") no-repeat center;
   background-size: cover;
   height: 679px;
 }
