--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -171,7 +171,7 @@ div.required .control-label:before {
     z-index: 1001;
 }
 #cart .dropdown-menu {
-    min-width: 100%;
+    //min-width: 100%;
 }
 @media (max-width: 478px) {
     #cart .dropdown-menu {
